[package]
name = "mkm3u"
version = "0.1.0"
description = "cli tool for creating m3u playlists"
edition = "2021"
authors = ["Sven Putze <github@hardcodes.de>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
m3u = "1"
